fixes cross browser issue with vault
